--- a/video/templates/dashboard/auth/login.html
+++ b/video/templates/dashboard/auth/login.html
@@ -21,7 +21,7 @@
   </div>
   <div class="form-group">
       <div class="col-sm-offset-2 colsm-10">
-          <button type="submit" class="btn btn-default">登录</button>
+          <button type="submit" class="btn btn-default">登录</button>${error}
       </div>
   </div>
 </form>
