*9-7 第一阶段完成dashboard的搭建与管理员模块的开发

--- a/video/static/dashboard/css/base.css
+++ b/video/static/dashboard/css/base.css
@@ -42,3 +42,11 @@ html, body {
     right: 0;
     border-left: 1px solid #8c8c8c;
 }
+
+h1 {
+            margin: 5%;
+        }
+.admin_paginator {
+    margin-left: 48px;
+    font-size: 1.1em;
+}
