--- a/video/templates/dashboard/auth/login.html
+++ b/video/templates/dashboard/auth/login.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<%! from django.shortcuts import reverse %>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +8,12 @@
     <link rel="stylesheet" href="/static/dashboard/css/login.css">
 </head>
 <body>
-<form class="form-horizontal edit-area" action="login" method="POST">
+<%
+  _login = reverse('dashboard_login')
+  ## 传入to跳转参数，就将to参数并入到utl中
+  action = _login if not to else '{}?to={}'.format(_login, to)
+%>
+<form class="form-horizontal edit-area" action="${action}" method="POST">
   ${csrf_token}
   <div class="form-group">
   <div class="col-sm-10">
