--- a/video/templates/dashboard/video/external_video.html
+++ b/video/templates/dashboard/video/external_video.html
@@ -3,38 +3,108 @@
 
 <%def name="content()">
     <%
-    from app.model.enums import VideoType
+    from app.model.enums import VideoType, FromType, NationalityType
     %>
     <h1>外链视频</h1>
 
-    <button class="btn btn-info open_btn">创建</button>
-    <form class="form-horizontal edit-area" action="" method="POST">
+    <button class="btn btn-info open_btn" id="open-add-video-btn">创建</button><span>${error}</span>
+    <form id="video-edit-area" class="form-horizontal edit-area add-video-area" action="" method="POST">
+        ${csrf_token}
         <div class="form-group">
             <div class="col-sm-10">
-                <input type="text" name="username" class="form-control" placeholder="视频名称">
+                <label>视频名称</label>
+                <input type="text" name="name" class="form-control" placeholder="视频名称">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-10">
-                <input type="text" name="username" class="form-control" placeholder="海报">
+                <label>海报名称</label>
+                <input type="text" name="image" class="form-control" placeholder="海报">
             </div>
         </div>
         <div class="form-group">
             <div class="col-sm-10">
-                <select class="form-control">
+                <label>视频类型</label>
+                <select class="form-control video-select" name="video_type">
                     %for video_type in VideoType:
                     <option value="${video_type.value}">${video_type.label}</option>
                     %endfor
                 </select>
             </div>
         </div>
-    </form>
+        <div class="form-group">
+            <div class="col-sm-10">
+                <label>视频来源</label>
+                <select class="form-control video-select" name="from_to">
+                    %for from_to in FromType:
+                    %if from_to != FromType('custom'):
+                        <option value="${from_to.value}">${from_to.label}</option>
+                    %endif
+                    %endfor
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10">
+                <label>国籍</label>
+                <select class="form-control video-select" name="nationality">
+                    %for nationality in NationalityType:
+                        <option value="${nationality.value}">${nationality.label}</option>
+                    %endfor
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-10">
+                <label>描述</label>
+                <textarea type="text" name="info" class="form-control" placeholder="请添加视频简介"></textarea>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-info">添加</button>
 
+    </form>
+    <table class="table">
+    <thead>
+        <tr>
+            <th>电影名称</th>
+            <th>海报</th>
+            <th>视频类型</th>
+            <th>来源</th>
+            <th>国籍</th>
+            <th>描述</th>
+            <th>状态</th>
+            <th>创建时间</th>
+            <th>修改时间</th>
+            <th>操作</th>
+        </tr>
+    </thead>
+    <tbody>
+
+        % for video in videos:
+            <tr>
+                <td>${video.name}</td>
+                <td><img class="video-images" src="${video.image}"></td>
+                <td>${VideoType(video.video_type).label}</td>
+                <td>${FromType(video.from_to).label}</td>
+                <td>${NationalityType(video.nationality).label}</td>
+                <td><p class="info">${video.info}</p></td>
+                <td>${video.status}</td>
+                <td>${video.created_time}</td>
+                <td>${video.updated_time}</td>
+                <td><a href="">编辑</a>&nbsp|&nbsp<a href="${reverse('video_sub', kwargs={'video_id': video.id})}">附属信息</a></td>
+            </tr>
+        % endfor
+    </tbody>
+    </table>
 </%def>
 
 <%def name="css()">
     <link href="/static/dashboard/css/external_video.css" rel="stylesheet" />
 </%def>
 <%def name="js()">\
-    <script src="/static/dashboard/css/external_video.js"></script>
+    <script src="/static/dashboard/js/video/external_video.js"></script>
 </%def>
+<img src="//liangcang-material.alicdn.com/prod/upload/91e4a81fcba0495ba497a5a21ce9a237.jpg?x-oss-process=image/resize,w_290/interlace,1/quality,Q_80/sharpen,100" data-spm-anchor-id="a2ha1.12528442.d_6.i0">
+
+
+
