--- a/video/static/dashboard/css/video_sub.css
+++ b/video/static/dashboard/css/video_sub.css
@@ -7,8 +7,29 @@ input, select {
     width: 50%;
     padding: 5px;
     border: 1px solid #cccccc;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
 }
 
 #add-url-btn, #add-star-btn {
     width: 50px !important;
 }
+
+p {
+    font-size: 20px;
+    font-styl: bold;
+}
+
+
+.info {
+    width: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    font-styl: normal;
+    font-size: 16px;
+}
+
+
+
