--- a/video/templates/dashboard/video/video_sub.html
+++ b/video/templates/dashboard/video/video_sub.html
@@ -6,14 +6,40 @@
 
 <%def name="content()">
 <h1>${video.name}</h1>
-<h3>${error}</h3>
+% if error:
+    <h4 style="color:red;">错误信息：${error}</h4>
+% endif
+
+<form class="form-horizontal edit-area add-video-area add-url" action="${reverse('video_star')}" method="POST">
+    ${csrf_token}
+    <p>演员信息添加</p>
+    <label>演员名称</label><input type="text" name="name" class="form-control" /><br>
+    <label>身份</label>
+    <select name="identity" class="form-control">
+        %for identity in IdentityType:
+        <option value="${identity.value}">${identity.label}</option>
+        %endfor
+    </select>
+    <input type="hidden" value="${video.id}" name="video_id" />
+    <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
+</form>
+
+<form class="form-horizontal edit-area add-video-area add-url" method="POST">
+##     每一个form表单中都要有csrf_tokeen，否则会报错
+    ${csrf_token}
+    <p>地址与选集编辑</p>
+    <label>添加地址</label><input id="url" type="text" name="url" class="form-control" /><br>
+    <label>添加集数</label><input id="number" type="number" name="number" class="form-control" />
+    <input type="hidden" value="" name="videosub_id" id="videosub-input-id"/>
+    <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
+</form>
 <h2>集数</h2>
 <table class="table">
     <thead>
         <tr>
             <th>集数</th>
             <th>地址</th>
-            <th>预览</th>
+            <th>控制</th>
         </tr>
     </thead>
     <tbody>
@@ -21,8 +47,13 @@
         % for video_sub in video.video_sub.all():
             <tr>
                 <td>第${video_sub.number}集</td>
-                <td>${video_sub.url}</td>
-                <td><a href="${video_sub.url}">查看</a></td>
+                <td><p class="info">${video_sub.url}</p></td>
+                <td>
+                    <a class="btn btn-default" href="${video_sub.url}">查看</a>&nbsp;
+##                  <!-- 将data的数据作为属性存入标签中，提供给上面的form表单获取 -->
+                    <button class="btn btn-default update-btn" data-id="${video_sub.id}" data-url="${video_sub.url}" data-number="${video_sub.number}">编辑</button>&nbsp;
+                    <a class="btn btn-default" href="${reverse('sub_delete', kwargs={'videosub_id': video_sub.id,'video_id': video.id})}">删除</a>
+                </td>
             </tr>
         % endfor
     </tbody>
@@ -37,27 +68,12 @@
     % endfor
 </ul>
 
-<form class="form-horizontal edit-area add-video-area add-url" method="POST">
-##     每一个form表单中都要有csrf_tokeen，否则会报错
-    ${csrf_token}
-    <label>添加地址</label><input type="text" name="url" class="form-control" />
-    <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
-</form>
 
-<form class="form-horizontal edit-area add-video-area add-url" action="${reverse('video_star')}" method="POST">
-    ${csrf_token}
-    <label>演员名称</label><input type="text" name="name" class="form-control" /><br>
-    <label>身份</label>
-    <select name="identity" class="form-control">
-        %for identity in IdentityType:
-        <option value="${identity.value}">${identity.label}</option>
-        %endfor
-    </select>
-    <input type="hidden" value="${video.id}" name="video_id" />
-    <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
-</form>
 </%def>
 <%def name="css()">
     <link href="/static/dashboard/css/video_sub.css" rel="stylesheet" />
+</%def>
+<%def name="js()">\
+<script src="/static/dashboard/js/video/video_sub.js"></script>
 </%def>
 
