--- a/video/templates/dashboard/video/external_video.html
+++ b/video/templates/dashboard/video/external_video.html
@@ -91,7 +91,11 @@
                 <td>${video.status}</td>
                 <td>${video.created_time}</td>
                 <td>${video.updated_time}</td>
-                <td><a href="">编辑</a>&nbsp|&nbsp<a href="${reverse('video_sub', kwargs={'video_id': video.id})}">附属信息</a></td>
+                <td>
+                    <a href="${reverse('video_update', kwargs={'video_id': video.id})}">编辑</a>&nbsp|&nbsp
+                    <a href="${reverse('video_sub', kwargs={'video_id': video.id})}">附属信息</a>&nbsp|&nbsp
+                    <a href="${reverse('video_update_status', kwargs={'video_id': video.id})}">修改状态</a>
+                </td>
             </tr>
         % endfor
     </tbody>
@@ -104,7 +108,6 @@
 <%def name="js()">\
     <script src="/static/dashboard/js/video/external_video.js"></script>
 </%def>
-<img src="//liangcang-material.alicdn.com/prod/upload/91e4a81fcba0495ba497a5a21ce9a237.jpg?x-oss-process=image/resize,w_290/interlace,1/quality,Q_80/sharpen,100" data-spm-anchor-id="a2ha1.12528442.d_6.i0">
 
 
 
