--- a/video/templates/dashboard/video/video_sub.html
+++ b/video/templates/dashboard/video/video_sub.html
@@ -1,7 +1,7 @@
 <%inherit file="../base.html"/>
 <%!
     from django.shortcuts import reverse
-    from app.model.enums import IdentityType
+    from app.model.enums import IdentityType, FromType
 %>
 
 <%def name="content()">
@@ -16,23 +16,34 @@
     <label>演员名称</label><input type="text" name="name" class="form-control" /><br>
     <label>身份</label>
     <select name="identity" class="form-control">
-        %for identity in IdentityType:
+        % for identity in IdentityType:
         <option value="${identity.value}">${identity.label}</option>
-        %endfor
+        % endfor
     </select>
+
     <input type="hidden" value="${video.id}" name="video_id" />
     <input type="submit" value="添加" class="btn btn-info" id="add-star-btn"/>
 </form>
 
-<form class="form-horizontal edit-area add-video-area add-url" method="POST">
-##     每一个form表单中都要有csrf_tokeen，否则会报错
-    ${csrf_token}
-    <p>地址与选集编辑</p>
-    <label>添加地址</label><input id="url" type="text" name="url" class="form-control" /><br>
-    <label>添加集数</label><input id="number" type="number" name="number" class="form-control" />
-    <input type="hidden" value="" name="videosub_id" id="videosub-input-id"/>
-    <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
-</form>
+% if FromType(video.from_to) == FromType.custom:
+    ##     每一个form表单中都要有csrf_tokeen，否则会报错
+    <form enctype="multipart/form-data" class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
+% else:
+    <form class="form-horizontal edit-area add-video-area add-url" method="POST">${csrf_token}
+% endif
+        <p>地址与选集编辑</p>
+        % if FromType(video.from_to) != FromType.custom:
+            <label>添加地址</label><input id="url" type="text" name="url" class="form-control" /><br>
+        % else:
+            <label>添加地址</label><input id="url" type="file" name="url" class="form-control" /><br>
+        % endif
+        <label>添加集数</label><input id="number" type="number" name="number" class="form-control" />
+        <input type="hidden" value="" name="videosub_id" id="videosub-input-id"/>
+        <input type="submit" value="添加" class="btn btn-info" id="add-url-btn"/>
+    </form>
+
+
+
 <h2>集数</h2>
 <table class="table">
     <thead>
@@ -73,7 +84,7 @@
 <%def name="css()">
     <link href="/static/dashboard/css/video_sub.css" rel="stylesheet" />
 </%def>
-<%def name="js()">\
+<%def name="js()">
 <script src="/static/dashboard/js/video/video_sub.js"></script>
 </%def>
 
