--- a/video/templates/dashboard/video/video_sub.html
+++ b/video/templates/dashboard/video/video_sub.html
@@ -58,7 +58,11 @@
         % for video_sub in video.video_sub.all():
             <tr>
                 <td>第${video_sub.number}集</td>
-                <td><p class="info">${video_sub.url}</p></td>
+                % if FromType(video.from_to) == FromType.custom:
+                    <td><p class="info">${video_sub.url or '处理中...'}</p></td>
+                % else:
+                    <td><p class="info">${video_sub.url}</p></td>
+                % endif
                 <td>
                     <a class="btn btn-default" href="${video_sub.url}">查看</a>&nbsp;
 ##                  <!-- 将data的数据作为属性存入标签中，提供给上面的form表单获取 -->
