10-6 完成client界面认证功能的开发

--- a/video/templates/client/video/video_sub.html
+++ b/video/templates/client/video/video_sub.html
@@ -1,4 +1,11 @@
+<%inherit file="../base.html"/>
+
 <%def name="content()">
+    <%
+    from django.shortcuts import reverse
+    from app.model.video import FromType
+    from app.utils.permission import client_auth
+    %>
     <img src="${video.image}" class="video-image" />
     <div class="data">
         <p><span class="span">名称：</span><br><span>${video.name}</span></p>
@@ -16,15 +23,18 @@
         </p>
         <p>
             <span class="span">选集</span><br>
-            <ul class="number-ul">
-            % for data in video.video_sub.all():
-                <li><a href="${data.url}" target="_blank">第${data.number}集</a></li>
-            % endfor
-            </ul>
+            % if FromType(video.from_to)==FromType.custom and not client_auth(request):
+                <a href="${reverse('client_user')}">请您登录</a>
+            % else:
+                <ul class="number-ul">
+                % for data in video.video_sub.all():
+                    <li><a href="${data.url}" target="_blank">第${data.number}集</a></li>
+                % endfor
+                </ul>
+            % endif
         </p>
     </div>
 </%def>
-<%inherit file="../base.html"/>
 <%def name="css()">
     <link rel="stylesheet" href="/static/client/css/video_sub.css">
 </%def>
